[package]
name = "serde_object_array"
version = "0.1.0"
edition = "2021"
authors = ["Tima Ghostov <ghosty8707@mail.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.15"
syn = "1.0.86"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"